RESOLVED FIXED285199
[Cleanup] RenderBox::availableLogicalWidthForLine should not check for fragmentation
https://bugs.webkit.org/show_bug.cgi?id=285199
Summary [Cleanup] RenderBox::availableLogicalWidthForLine should not check for fragme...
alan
Reported 2024-12-27 13:50:56 PST
ssia
Attachments
Patch (5.23 KB, patch)
2024-12-27 13:55 PST, alan
no flags
Patch (5.23 KB, patch)
2024-12-30 13:21 PST, alan
no flags
[fast-cq]Patch (5.23 KB, patch)
2024-12-30 14:33 PST, alan
no flags
alan
Comment 1 2024-12-27 13:55:04 PST
alan
Comment 2 2024-12-30 13:21:32 PST
alan
Comment 3 2024-12-30 14:33:38 PST
Created attachment 473714 [details] [fast-cq]Patch
EWS
Comment 4 2024-12-30 16:30:53 PST
Committed 288336@main (0d2b43ab1c60): <https://commits.webkit.org/288336@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 473714 [details].
Radar WebKit Bug Importer
Comment 5 2024-12-30 16:31:17 PST
Note You need to log in before you can comment on or make changes to this bug.