[Cleanup] RenderBox::availableLogicalWidthForLine should not check for fragmentation https://bugs.webkit.org/show_bug.cgi?id=285199

Reviewed by Antti Koivisto.

All callers of availableLogicalWidthForLineInFragment pass in nullptr fragment.

1. Move all callsites of availableLogicalWidthForLine (there are only 2) to use availableLogicalWidthForLineInFragment and pass in the current fragment.
2. Previous availableLogicalWidthForLineInFragment call availableLogicalWidthForLine where
availableLogicalWidthForLine does not check for fragment.

* Source/WebCore/rendering/LegacyRootInlineBox.cpp:
(WebCore::LegacyRootInlineBox::lineBoxWidth const):
* Source/WebCore/rendering/RenderBlock.h:
(WebCore::RenderBlock::availableLogicalWidthForLine const):
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::getClearDelta):
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::shrinkLogicalWidthToAvoidFloats const):
(WebCore::RenderBox::containingBlockAvailableLineWidth const):

Canonical link: https://commits.webkit.org/288336@main